# esbe

./: .gitignore  .pre-commit-config.yaml  01_esbe_analysis_setup_software.ipynb  02_esbe_analysis_create_buildings.ipynb  03_esbe_analysis_eems_and_optimization.ipynb  03_esbe_analysis_reopt.ipynb  04_esbe_analysis_ten_5G_Python.ipynb  05_esbe_analysis_reopt.ipynb  05_esbe_analysis_ten_5G_CLI.ipynb  07a_esbe_analysis_ten_5G_explore.ipynb  07b_esbe_analysis_ten_5G_Python.ipynb  07b_esbe_analysis_ten_5G_aggregated.ipynb  08_post_process_ten.ipynb  0_config.ipynb  0_esbe_analysis.ipynb  10_post_process_non_connected.ipynb  11_post_process_ten.ipynb  1_esbe_analysis.ipynb  20_utilities.ipynb  21_esbe_test_ten_5G_CLI.ipynb  22_esbe_test_des_4G.ipynb  2_esbe_analysis_eems.ipynb  2_esbe_analysis_reopt.ipynb  2_post_process_uo_agg.ipynb  3_esbe_analysis_reopt.ipynb  3_esbe_analysis_tens.ipynb  3_post_process_uo_agg.ipynb  4_esbe_analysis_tens.ipynb  4_post_process.ipynb  4_post_process_non_connected.ipynb  4_post_process_uo_agg.ipynb  5_post_process_des.ipynb  5_post_process_non_connected.ipynb  6_post_process_des.ipynb  7_post_process_uo_agg.ipynb  9_utilities.ipynb  README.md  esbe_analysis.ipynb  pyproject.toml  urbanopt_cli_container_test.ipynb
.pre-commit/: format_geojson.py  remove_kernelspec.py
activity_to_osa/: Gemfile  uo_building_to_osa.rb
analysis_outputs/: annual_net_zero_groups_of_5_report.html  annual_net_zero_groups_of_5_top_bottom.csv  net_zero_groups_of_5_report.html  net_zero_groups_of_5_top_bottom.csv  zarin5_bottom_all_raw.csv  zarin5_top_all_raw.csv  (+2 more)
(+779 files in other folders)
