[tool.poetry]
name = "esbe"
version = "0.1.0"
description = ""
authors = ["Nicholas Long <nllong>"]
readme = "README.md"
packages = [{include = "dc_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

pandas = "~2.0"
seaborn = "~0.12"
requests = "~2.31"
jupyterlab = "~4.0"
plotly = "~5.15"
kaleido = "0.2.1"
openpyxl = "^3.0.10"
geojson = "^3.0.0"
scikit-learn = "^1.2.2"
geopy = "^2.3.0"
folium = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
