[tool.poetry]
name = "esbe"
version = "0.2.0"
description = ""
authors = ["Nicholas Long <http://github.com/nllong>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Force Python 3.12-compatible wheel versions for packages that can't build from source
numpy = ">=1.26,<2.0"
matplotlib = ">=3.8"
pandas = ">=2.1"
packaging = ">=24.0"
seaborn = "^0.13.2"
requests = "^2.33.1"
jupyterlab = "^4.5.6"
plotly = "^6.7.0"

# General development where dependent libraries are one directory relative
# URBANopt DES pulls in geojson-modelica-translator and modelica-builder
urbanopt-des = { path = "../urbanopt-des", develop = true }

# openpyxl = "^3.0.10"
# geojson = "^3.0.0"
# scikit-learn = "^1.2.2"
# geopy = "^2.3.0"
# folium = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
